[package]
name = "api-in-rust"
version = "0.1.0"
authors = ["Gorey <goreycn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bean_check = { path = "bean_check"}
bean_check_lib = { path = "bean_check_lib"}
regex = "1"
md-5 = "0.8.0"